# rust-axum-siwe-template

back_end/: Cargo.toml
back_end/src/: cache.rs  lib.rs  main.rs
back_end/src/api/: example_route.rs  mod.rs  siwe.rs
back_end/src/handlers/: example_handler.rs  mod.rs  siwe_handler.rs
back_end/src/models/: claims.rs  error.rs  jwt.rs  mod.rs  siwe_login_payload.rs
